@@ -1,5 +1,12 @@
 2006-02-15  Ross Burton  <ross@burtonini.com>
 
+	* src/sound-juicer.h:
+	* src/sj-extractor.c:
+	* src/sj-play.c:
+	Pull out the cd source name as define.
+
+2006-02-15  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	* src/sj-prefs.c:
 	Re-arrange the Preferences dialog, add ellipsis as required,
